# cereon-sdk

./: CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish-sdk-pypi.yml
cereon_sdk/: __init__.py  _version.py
cereon_sdk/django/: __init__.py  consumers.py  serializers.py  utils.py  views.py
cereon_sdk/fastapi/: __init__.py  protocols.py  routes.py  types.py  utils.py
